// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overrideJestConfig with build script 1`] = `
Object {
  "collectCoverage": true,
  "moduleNameMapper": Object {
    "\\\\.(css|less|scss|sss|styl)$": "D:\\\\dev\\\\@react-ryo-cli\\\\node_modules\\\\identity-obj-proxy\\\\src\\\\index.js",
  },
  "setupFiles": Array [
    "D:\\\\dev\\\\@react-ryo-cli\\\\packages\\\\react-ryo-cli\\\\config\\\\enzyme\\\\enzyme_setup.js",
  ],
  "setupFilesAfterEnv": Array [
    "D:\\\\dev\\\\@react-ryo-cli\\\\packages\\\\react-ryo-cli\\\\config\\\\jest\\\\jest_setup.js",
  ],
  "snapshotSerializers": Array [
    "enzyme-to-json/serializer",
  ],
  "testMatch": Array [],
}
`;

exports[`overrideJestConfig with build:development script 1`] = `
Object {
  "collectCoverage": false,
  "moduleNameMapper": Object {
    "\\\\.(css|less|scss|sss|styl)$": "D:\\\\dev\\\\@react-ryo-cli\\\\node_modules\\\\identity-obj-proxy\\\\src\\\\index.js",
  },
  "setupFiles": Array [
    "D:\\\\dev\\\\@react-ryo-cli\\\\packages\\\\react-ryo-cli\\\\config\\\\enzyme\\\\enzyme_setup.js",
  ],
  "setupFilesAfterEnv": Array [
    "D:\\\\dev\\\\@react-ryo-cli\\\\packages\\\\react-ryo-cli\\\\config\\\\jest\\\\jest_setup.js",
  ],
  "snapshotSerializers": Array [
    "enzyme-to-json/serializer",
  ],
  "testMatch": Array [],
}
`;
